--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 av==9.2.0
-opencv-python==4.1.2
+opencv-contrib-python==4.1.2.30
+opencv-python==4.1.2.30
 pandas==1.3.5
 sklearn==0.0
 sklearn-pandas==1.8.0
